--- a/biography.html
+++ b/biography.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en -us">
     <head>
         <meta charset="utf-8" />
         <title>Biography</title>
     </head>
     
     <body>
-        <h1>Student Bio</h1>
-        <h2>Antony Laroche</h2>
-        <img src="CoolPicMe.jpg" alt="Picture of me with sunglasses" height="200" width="200">
-        <p>Hello, my name is Antony Laroche.  I was born in Port-au-Prince, Haiti.
-        I have a Bachelor's degree in Chemical Engineering from the University of Florida.</p>
-        <h2>Contact Info</h2>
+        <header>
+          <h1>Student Bio</h1>  
+        </header>
+        <div>
+        <section id="main-bio">
+            <h2>Antony Laroche</h2>
+            <img id="bio-image"  src="CoolPicMe.jpg" alt="Picture of me with sunglasses" height="200" width="200">
+            <p>Hello, my name is Antony Laroche.  I was born in Port-au-Prince, Haiti.
+            I have a Bachelor's degree in Chemical Engineering from the University of Florida and a Master's in Engineering management.
+            I have spent the last 18 years working in the refining industry in a wide variaty of roles ranging from process engineeing to project development
+            and refinery economics. In addition to my work as an engineer, I have a passion for finance and economics.  As a result, I spend
+            a lot of my spare time reading and analyzing the financial news of the day. I take pleasure in deciphering insights from
+            the wealth of data available to us from news outlets and government agencies and converting those insight to personal investment
+            strategies and general worldly advice.</p>
+        </section> 
+        <section id="contact-info">  
+        <h2> Contact Info</h2>
         <ul>
-            <li>Email: <a href="mailto:antony@larochefamily.net" target="_top">antony@larochefamily.net</a></li>
-            <li>Github: <a href="http://github.com/ajlaroche" target="_blank"> ajlaroche</a></li>
-            <li>Portfolio: <a href="">Coming Soon</a></li>
+            <li><strong>Email:</strong> <a href="mailto:antony@larochefamily.net" target="_top">antony@larochefamily.net</a></li>
+            <li><strong>Github:</strong> <a href="http://github.com/ajlaroche" target="_blank"> ajlaroche</a></li>
+            <li><stong>Portfolio:</stong> <a href="">Coming Soon</a></li>
         </ul>
+        </section> 
+        </div>
     </body>
     </html>
